working on new extension impl on bindings